<resources>
    <string name="app_name">FamilyMapClient</string>
    <!-- Strings related to login -->

    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Register failed"</string>
    <string name="emailLabel">Email:</string>
    <string name="firstNameLabel">First Name:</string>
    <string name="lastNameLabel">Last Name:</string>
    <string name="usernameLabel">Username:</string>
    <string name="passwordLabel">Password:</string>
    <string name="serverNameLabel">Server Name:</string>
    <string name="serverPortLabel">Server Port:</string>
    <string name="emailHintLabel">Email</string>
    <string name="firstNameHintLabel">First Name</string>
    <string name="lastNameHintLabel">Last Name</string>
    <string name="usernameHintLabel">Username</string>
    <string name="passwordHintLabel">Password</string>
    <string name="serverNameHintLabel">Server Name</string>
    <string name="serverPortHintLabel">Server Port</string>
    <string name="genderLabel">Gender:</string>
    <string name="genderHintLabel">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="searchIconSelected">Search Selected</string>
    <string name="settingsIconSelected">Settings Selected</string>
    <string name="lifeStoryLinesSetting">Life Story Lines</string>
    <string name="lifeStoryLinesSubSetting">SHOW LIFE STORY LINES</string>
    <string name="familyTreeLinesSetting">Family Tree Lines</string>
    <string name="familyTreeLinesSubSetting">SHOW FAMILY TREE LINES</string>
    <string name="spouseLinesSetting">Spouse Lines</string>
    <string name="spouseLinesSubSetting">SHOW SPOUSE LINES</string>
    <string name="fathersSideSetting">Father\'s Side</string>
    <string name="fathersSideSubSetting">FILTER BY FATHER\'S SIDE OF THE FAMILY</string>
    <string name="mothersSideSetting">Mother\'s Side</string>
    <string name="mothersSideSubSetting">FILTER BY MOTHER\'S SIDE OF THE FAMILY</string>
    <string name="maleEventsSetting">Male Events</string>
    <string name="maleEventsSubSetting">FILTER EVENTS BASED ON GENDER</string>
    <string name="femaleEventsSetting">Female Events</string>
    <string name="femaleEventsSubSetting">FILTER EVENTS BASED ON GENDER</string>
    <string name="logout">Logout</string>
    <string name="logoutCaption">RETURN TO THE LOGIN SCREEN</string>
    <string name="personExpandalbleListTitle">FAMILY</string>
    <string name="eventsExpandalbleListTitle">LIFE EVENTS</string>

</resources>
