<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".ui.login.LoginFragment">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serverNameLabel" />

            <EditText
                android:id="@+id/serverName"
                android:layout_width="3dp"
                android:layout_height="48dp"
                android:hint="@string/serverNameHintLabel"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:text="10.0.2.2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serverPortLabel" />

            <EditText
                android:id="@+id/serverPort"
                android:layout_width="275dp"
                android:layout_height="48dp"
                android:hint="@string/serverPortHintLabel"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:text="8080" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usernameLabel" />

            <EditText
                android:id="@+id/username"
                android:layout_width="275dp"
                android:layout_height="48dp"
                android:hint="@string/usernameHintLabel"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordLabel" />

            <EditText
                android:id="@+id/password"
                android:layout_width="275dp"
                android:layout_height="48dp"
                android:hint="@string/passwordHintLabel"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstNameLabel" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="275dp"
                android:layout_height="48dp"
                android:hint="@string/firstNameHintLabel"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastNameLabel" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="275dp"
                android:layout_height="48dp"
                android:hint="@string/lastNameHintLabel"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailLabel" />

            <EditText
                android:id="@+id/email"
                android:layout_width="275dp"
                android:layout_height="48dp"
                android:hint="@string/emailHintLabel"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genderLabel" />

            <RadioGroup
                android:id="@+id/genderSelection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/maleSelection"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/maleSelection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/femaleSelection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        tools:layout_editor_absoluteX="16dp">

        <Button
            android:id="@+id/register"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/action_register" />

        <Button
            android:id="@+id/login"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:enabled="false"
            android:text="@string/action_sign_in" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>