<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:stretchColumns="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewLifeStory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lifeStoryLinesSetting"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewLifeStory2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lifeStoryLinesSubSetting"
                    android:textSize="12sp" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchLifeStory"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:checked="true" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#BDBDBD">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_span="2"
                android:text=""></TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewFamilyTree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/familyTreeLinesSetting"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewFamilyTree2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/familyTreeLinesSubSetting"
                    android:textSize="12sp" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchFamilyTree"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:checked="true" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#BDBDBD">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_span="2"
                android:text=""></TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewSpouse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/spouseLinesSetting"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewSpouse2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spouseLinesSubSetting"
                    android:textSize="12sp" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchSpouse"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:checked="true" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#BDBDBD">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_span="2"
                android:text=""></TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewFathersSide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fathersSideSetting"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewFathersSide2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fathersSideSubSetting"
                    android:textSize="12sp" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchFathersSide"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:checked="true" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#BDBDBD">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_span="2"
                android:text=""></TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewMothersSide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mothersSideSetting"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewMothersSide2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mothersSideSubSetting"
                    android:textSize="12sp" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchMothersSide"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:checked="true" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#BDBDBD">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_span="2"
                android:text=""></TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewMaleEvents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/maleEventsSetting"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewMaleEvents2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maleEventsSubSetting"
                    android:textSize="12sp" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchMaleEvents"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:checked="true" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#BDBDBD">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_span="2"
                android:text=""></TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewFemaleEvents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/femaleEventsSetting"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewFemaleEvents2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/femaleEventsSubSetting"
                    android:textSize="12sp" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchFemaleEvents"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:checked="true" />

        </TableRow>
        <TableRow
            android:layout_height="1px"
            android:background="#BDBDBD">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_span="2"
                android:text=""></TextView>
        </TableRow>

        <TableRow
            android:id="@+id/logoutTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewLogout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logoutCaption"
                    android:textSize="12sp" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_height="1px"
            android:background="#BDBDBD">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_span="2"
                android:text=""></TextView>
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>